# BirdNet-Behavior

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELETE-ME.md  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.alsa.yml  docker-compose.pulse.yml  docker-compose.yml  install.sh  quickstart.sh
.github/workflows/: ci.yml  docker.yml  release.yml
crates/birdnet-behavioral/: Cargo.toml
crates/birdnet-behavioral/src/: connection.rs  lib.rs  queries.rs  types.rs
crates/birdnet-behavioral/src/connection/: analytics.rs  mod.rs  sync.rs
crates/birdnet-behavioral/src/phenology/: abundance.rs  mod.rs  timing.rs  types.rs
crates/birdnet-core/: Cargo.toml
crates/birdnet-core/benches/: audio_pipeline.rs
crates/birdnet-core/src/: config.rs  i18n.rs  lib.rs
crates/birdnet-core/src/audio/: capture.rs  decode.rs  extraction.rs  mod.rs  resample.rs  spectrogram.rs
crates/birdnet-core/src/audio/capture/: disk.rs  manager.rs  mod.rs  process.rs  tmpfs.rs  types.rs
crates/birdnet-core/src/audio/capture/disk/: manager.rs  mod.rs  purge.rs
crates/birdnet-core/src/audio/extraction/: config.rs  convert.rs  extractor.rs  format.rs  metadata.rs  mod.rs  wav.rs
crates/birdnet-core/src/audio/quality/: mod.rs  noise_floor.rs  rain_detector.rs  snr.rs  types.rs
crates/birdnet-core/src/audio/spectrogram/: compute.rs  live.rs
crates/birdnet-core/src/detection/: daemon.rs  mod.rs  pipeline.rs  privacy.rs  types.rs
crates/birdnet-core/src/inference/: labels.rs  mod.rs  model.rs  species_filter.rs
crates/birdnet-db/: Cargo.toml
crates/birdnet-db/benches/: db_queries.rs
crates/birdnet-db/src/: alert_rules.rs  lib.rs  migration.rs  notifications.rs  resilience.rs  settings.rs  sqlite.rs
crates/birdnet-db/src/sqlite/: connection.rs  mod.rs  types.rs
crates/birdnet-db/src/sqlite/queries/: analytics.rs  correlation.rs  detections.rs  heatmap.rs  images.rs  mod.rs  quarantine.rs  species.rs
crates/birdnet-integrations/: Cargo.toml
crates/birdnet-integrations/src/: apprise.rs  auto_update.rs  birdweather.rs  heartbeat.rs  lib.rs  notification.rs  species_images.rs  weekly_report.rs
crates/birdnet-integrations/src/email/: mod.rs  smtp.rs  templates.rs  types.rs
crates/birdnet-integrations/src/mqtt/: discovery.rs  mod.rs  publisher.rs  types.rs
crates/birdnet-integrations/src/species_images/: cache.rs  mod.rs  provider.rs  types.rs  wikipedia.rs
crates/birdnet-migrate/: Cargo.toml
crates/birdnet-migrate/src/: error.rs  lib.rs  progress.rs  schema.rs  traits.rs
crates/birdnet-migrate/src/birdnet_pi/: csv_importer.rs  detector.rs  importer.rs  mod.rs  species_report.rs  validator.rs
crates/birdnet-scheduler/: Cargo.toml
crates/birdnet-scheduler/src/: error.rs  inhibit.rs  lib.rs  schedule.rs  solar.rs  traits.rs  window.rs
crates/birdnet-timeseries/: Cargo.toml
crates/birdnet-timeseries/src/: error.rs  executor.rs  lib.rs
crates/birdnet-timeseries/src/executor/: activity.rs  diversity.rs  mod.rs  peak.rs  sessions.rs  trend.rs
crates/birdnet-timeseries/src/queries/: activity.rs  diversity.rs  gap.rs  mod.rs  peak.rs  trend.rs
crates/birdnet-timeseries/src/types/: mod.rs  params.rs  results.rs
crates/birdnet-timeseries/src/window/: hopping.rs  mod.rs  session.rs  sliding.rs  tumbling.rs
crates/birdnet-web/: Cargo.toml
crates/birdnet-web/src/: auth.rs  lib.rs  rate_limit.rs  server.rs  state.rs  system_info.rs
crates/birdnet-web/src/routes/: analytics.rs  detections.rs  export.rs  health.rs  images.rs  livestream.rs  mod.rs  pages.rs  recordings.rs  species.rs  spectrogram.rs  spectrogram_ws.rs  static_files.rs  system.rs  timeseries.rs  websocket.rs
crates/birdnet-web/src/routes/admin/: backup.rs  images.rs  logs.rs  migration.rs  mod.rs  notification_test.rs  notifications.rs  overview.rs  quality.rs  rules.rs  settings.rs  species_tester.rs  system.rs  system_controls.rs  update.rs
crates/birdnet-web/src/routes/admin/migration/: render.rs
crates/birdnet-web/src/routes/admin/settings/: form.rs  handler.rs  mod.rs  render.rs
crates/birdnet-web/src/routes/admin/settings/render/: audio.rs  detection.rs  email.rs  location.rs  mod.rs  notifications.rs  species.rs  system.rs
crates/birdnet-web/src/routes/admin/species/: handler.rs  mod.rs  render.rs
crates/birdnet-web/src/routes/admin/system_controls/: backup.rs  data.rs  mod.rs  service.rs  update.rs
crates/birdnet-web/src/routes/export/: birddb.rs  csv.rs  ebird.rs  mod.rs
crates/birdnet-web/src/routes/pages/: audio_player.rs  behavioral.rs  charts.rs  correlation.rs  dashboard.rs  detection_detail.rs  gallery.rs  health.rs  heatmap.rs  history.rs  life_list.rs  livestream.rs  mod.rs  notification_center.rs  quarantine.rs  recordings.rs  species_pages.rs  system_dashboard.rs  timeseries_dash.rs  today.rs  weekly_report.rs
crates/birdnet-web/src/routes/pages/dashboard/: heatmap_widget.rs  kiosk.rs  mod.rs  partials.rs  stats.rs
crates/birdnet-web/src/routes/spectrogram/: colormap.rs  font.rs  mod.rs  png.rs  render.rs
crates/birdnet-web/src/routes/timeseries/: helpers.rs  params.rs  stubs.rs
crates/birdnet-web/static/: htmx-sse.js
crates/birdnet-web/templates/: analytics.html  dashboard.html  layout.html  recordings.html  species.html  species_detail.html  timeseries.html  today.html
docker/: entrypoint.sh
docs/: FEATURE_PARITY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  RUST_ARCHITECTURE_PLAN.md
docs/architecture/: 01-motivation.md  02-architecture.md  03-coding-standards.md  04-dependencies.md  05-audio-pipeline.md  06-ml-inference.md  07-database.md  08-behavioral-analytics.md  09-web-server.md  10-deployment.md  11-migration.md  12-risks.md  13-implementation-status.md
scripts/: visual_qa.mjs
src/: capture.rs  cli.rs  daemon.rs  helpers.rs  integrations.rs  main.rs  weekly_report.rs
tests/: audio_pipeline.rs  inference_e2e.rs  web_api.rs  web_api_admin.rs  web_api_analytics.rs  web_api_detections.rs  web_api_export.rs  web_api_pages.rs  web_api_quarantine.rs  web_api_species.rs
