[workspace]
members = [
    "crates/birdnet-core",
    "crates/birdnet-db",
    "crates/birdnet-web",
    "crates/birdnet-integrations",
    "crates/birdnet-behavioral",
    "crates/birdnet-timeseries",
    "crates/birdnet-migrate",
    "crates/birdnet-scheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/tomtom215/BirdNet-Behavior"
authors = ["tomtom215"]
readme = "README.md"
keywords = ["birdnet", "bird-classification", "acoustic-monitoring", "duckdb", "raspberry-pi"]
categories = ["science", "multimedia::audio"]

[workspace.dependencies]
# Internal crates
birdnet-core = { path = "crates/birdnet-core" }
birdnet-db = { path = "crates/birdnet-db" }
birdnet-web = { path = "crates/birdnet-web" }
birdnet-integrations = { path = "crates/birdnet-integrations" }
birdnet-behavioral = { path = "crates/birdnet-behavioral" }
birdnet-timeseries = { path = "crates/birdnet-timeseries" }
birdnet-migrate = { path = "crates/birdnet-migrate" }
birdnet-scheduler = { path = "crates/birdnet-scheduler" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Async
tokio = { version = "1.51", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "backup"] }
duckdb = { version = "1.10501", features = ["bundled"] }

# Web
axum = { version = "0.8.8", features = ["ws", "form"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

# Email (SMTP) — pure Rust TLS via rustls, no OpenSSL
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# System monitoring — CPU, memory, temperature
sysinfo = { version = "0.32", default-features = false, features = ["system", "component"] }

# Async IO utilities (file streaming for recording serving)
tokio-util = { version = "0.7", features = ["io"] }

# Tokio stream utilities (SSE log streaming)
tokio-stream = { version = "0.1", features = ["sync"] }

# Audio
symphonia = { version = "0.5.5", features = ["wav", "flac", "mp3"] }
rubato = "1.0.1"
hound = "3.5"

# ML Inference (ONNX Runtime via ort — supports all ONNX opsets)
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls", "copy-dylibs"] }
ndarray = "0.16"

# File watching
notify = "8"

# Config
configparser = "3.1"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Testing
proptest = "1.10"
tempfile = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pragmatic allowances
module_name_repetitions = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Binary crate
[package]
name = "birdnet-behavior"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "BirdNet-Behavior: Real-time acoustic bird classification with DuckDB behavioral analytics"

[features]
## Enable DuckDB-powered behavioral analytics (sessionize, retention, funnel, etc.).
## Requires ~7 min C++ compilation on first build due to bundled libduckdb.
analytics = ["birdnet-behavioral/analytics", "birdnet-timeseries/analytics", "birdnet-web/analytics"]

[dependencies]
birdnet-core.workspace = true
birdnet-db.workspace = true
birdnet-web.workspace = true
birdnet-integrations.workspace = true
birdnet-behavioral.workspace = true
birdnet-timeseries.workspace = true
birdnet-migrate.workspace = true
birdnet-scheduler.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
hound.workspace = true
tempfile.workspace = true
rusqlite.workspace = true
tower.workspace = true
birdnet-web.workspace = true
birdnet-db.workspace = true
serde_json.workspace = true

[lints]
workspace = true
