[package]
name = "birdnet-behavioral"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DuckDB behavioral analytics for bird detection patterns"

[dependencies]
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
