[package]
name = "birdnet-behavioral"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DuckDB behavioral analytics for bird detection patterns"

[features]
## Enable the DuckDB connection module for real behavioral analytics queries.
analytics = ["dep:duckdb", "dep:rusqlite"]

[dependencies]
duckdb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
duckdb.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
