[package]
name = "birdnet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core detection pipeline: audio processing, ML inference, and detection types"

[dependencies]
serde.workspace = true
configparser.workspace = true
tracing.workspace = true

# Audio pipeline (pure Rust, zero C deps)
symphonia.workspace = true
rubato.workspace = true
audioadapter-buffers = "2"
realfft = "3"

# Audio writing (WAV extraction)
hound.workspace = true

# ML Inference (ONNX Runtime)
ort.workspace = true
ndarray.workspace = true

# File watching
notify.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
filetime = "0.2"

[lints]
workspace = true
