[package]
name = "birdnet-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "External service integrations: BirdWeather, Apprise, Flickr, Wikipedia"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true

[lints]
workspace = true
