[package]
name = "birdnet-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "External service integrations: BirdWeather, Apprise, Wikipedia, email, MQTT, auto-update"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio.workspace = true
lettre.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
