[package]
name = "birdnet-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Web server: REST API, WebSocket, and HTMX pages via axum"

[dependencies]
birdnet-core.workspace = true
birdnet-db.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[lints]
workspace = true
