[package]
name = "birdnet-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web server: REST API, WebSocket, and HTMX pages via axum"

[features]
## Enable DuckDB-powered behavioral analytics endpoints.
analytics = ["birdnet-behavioral/analytics", "birdnet-timeseries/analytics"]

[dependencies]
birdnet-behavioral.workspace = true
birdnet-timeseries.workspace = true
birdnet-core.workspace = true
birdnet-db.workspace = true
birdnet-integrations.workspace = true
birdnet-migrate.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["form"] }
tower.workspace = true
tower-http.workspace = true
rusqlite.workspace = true

[lints]
workspace = true
